fix horizontal scroll 1.0.1 remove big img 1023px

--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ a{
   color: white;
 }
 
+@media (max-width:1023px) {
+  .img-djp-manu{
+    display: none;
+  }
+}
+
 .txt-about{
   padding: 10px;
 }
